@@ -154,6 +154,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - SciLab                 Christophe David
 - Smalltalk              Bananeweizen
 - Smarty                 Alan Juden
+- SystemVerilog          Sean O'Boyle
 - T-SQL                  Duncan Lock
 - TeraTerm               Boris Maisuradze
 - Text                   SmokingRope
